--- a/webcrawler/package.json
+++ b/webcrawler/package.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "axios": "^1.2.1",
     "cheerio": "^1.0.0-rc.12"
+  },
+  "devDependencies": {
+    "serverless-iam-roles-per-function": "^3.2.0"
   }
 }
