--- a/webcrawler/package.json
+++ b/webcrawler/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/Weitingchien/Amazon_application#readme",
   "dependencies": {
+    "aws-sdk": "^2.1284.0",
     "axios": "^1.2.1",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "serverless-iam-roles-per-function": "^3.2.0"
